--- a/bower.json
+++ b/bower.json
@@ -21,7 +21,11 @@
   ],
   "dependencies": {
     "polymer": "Polymer/polymer#^1.0.0",
-    "iron-ajax": "PolymerElements/iron-ajax#^1.2.0"
+    "iron-ajax": "PolymerElements/iron-ajax#^1.2.0",
+    "paper-dialog": "PolymerElements/paper-dialog#^1.0.4",
+    "paper-input": "PolymerElements/paper-input#^1.1.11",
+    "iron-list": "PolymerElements/iron-list#^1.3.1",
+    "paper-checkbox": "PolymerElements/paper-checkbox#^1.1.3"
   },
   "devDependencies": {
     "iron-component-page": "PolymerElements/iron-component-page#^1.0.0",
